# Video-OCR-Application

./: CMakeLists.txt  README.md  colorselectdialog.cpp  colorselectdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  ocrresultdialog.cpp  ocrresultdialog.h  videoprocessor.cpp  videoprocessor.h
.github/workflows/: build.yml
